clapi_macros/test_suite/tests/ui/fail/invalid_option_value/invalid_option_default.rs
use clapi::macros::*;

#[command]
#[option(x, default="hello")]
fn app(x: i64){}

fn main(){}